# argon

./: .env.example  .gitignore  .tmuxinator.yml  .todo-lt  Cargo.toml  README.md
desktop/: package.json
desktop/src-tauri/: Cargo.toml
migrations/2023-08-27-175352_init/: down.sql  up.sql
server/: Cargo.toml  Rocket.toml
server/migrations/2023-08-27-175352_init/: down.sql  up.sql
server/src/: schema.rs
server/src/models/: artists.rs  features.rs  mod.rs
src/: App.tsx  auth.rs  db.rs  main.rs  scan.rs  schema.rs
src-tauri/: tauri.conf.json
src/models/: albums.rs  albums_tracks.rs  artists.rs  covers.rs  favorites.rs  features.rs  mod.rs  playlists.rs  playlists_tracks.rs  scan_info.rs  sessions.rs  songs.rs  tokens.rs  tracks.rs  users.rs
src/routes/: albums.rs  artists.rs  auth.rs  cover.rs  favorites.rs  mod.rs  picture.rs  playlists.rs  scan.rs  search.rs  stats.rs  stream.rs  tracks.rs
src/routes/albums/: all_albums.rs  mod.rs  one_album.rs
src/routes/artists/: all_artists.rs  mod.rs  one_artist.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  signup.rs
src/routes/favorites/: all_favorites.rs  mod.rs  new_favorite.rs  remove_favorite.rs
src/routes/playlists/: all_playlists.rs  mod.rs  new_playlist.rs  new_playlist_track.rs  one_playlist.rs  remove_playlist.rs  remove_playlist_track.rs  update_playlist.rs
src/routes/scan/: mod.rs  run_scan.rs  scan_info.rs
src/routes/search/: mod.rs  search_albums.rs  search_all.rs  search_artists.rs  search_tracks.rs
src/scanner/: extract_metadata.rs  lock_manager.rs  mod.rs
(+3 files in other folders)
