[package]
name = "argon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"]}
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dirs = "5.0.1"
walkdir = "2"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
rocket = { version = "=0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
id3 = "1.7.0"
sha256 = "1.4.0"
mpeg-audio-header = "0.0.6"
nanoid = "0.4.0"
rocket_seek_stream = "0.2.6"
pwhash = "1.0.0"
