[package]
name = "argon-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.1", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
rocket = "=0.5.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
